# dubhe

./: .gitattributes  .gitignore  Accept-Dubhe.cmd  Activate-Dubhe-GitHub-Actions.cmd  Authorize-Dubhe-GitHub-Actions.cmd  Build-Dubhe-User-Kit.cmd  Check-Dubhe-Production.cmd  Check-Dubhe.cmd  Configure-Dubhe.cmd  Connect-Dubhe-Mobile.cmd  Export-Dubhe-Production-Pack.cmd  Export-Dubhe-Release-Evidence.cmd  Import-Dubhe-CI-Artifacts.cmd  Open-Dubhe-Install-Guide.cmd  Open-Dubhe-Mobile-Guide.cmd  Prepare-Dubhe-Delivery.cmd  README.md  Setup-Dubhe-MFA.cmd  Smoke-Dubhe.cmd  Start-Dubhe-LAN.cmd  Start-Dubhe.cmd  Stop-Dubhe-Core.cmd  Test-Dubhe-Services.cmd  Verify-Dubhe-Audit.cmd  Verify-Dubhe-Delivery.cmd
config/: dubhe.local.env.example
docs/: ARCHITECTURE.md  BROKER_ADAPTERS.md  DATA_SOURCES.md  INSTALL_GUIDE.md  MOBILE_QUICK_START.md  PROJECT_PLAN.md  REFERENCE_BOOK.md  SIMULATION_TEST_CHAIN.md  SYNC_BACKEND.md  USER_KIT_README.md
scripts/: activate-github-actions.ps1  authorize-github-workflow-scope.ps1  build-user-kit.ps1  check-local-dubhe.ps1  check-production-readiness.ps1  (+18 more)
services/core/: README.md  pyproject.toml
services/core/scripts/: export_openapi.py  run.ps1  setup.ps1  test.ps1
services/core/src/dubhe_core/: __init__.py  alpaca_broker.py  analysis.py  assistant.py  auth_runtime.py  backtest.py  external_checks.py  llm.py  local_mfa.py  main.py  models.py  news_sources.py  paper_broker.py  production_readiness.py  risk.py  runtime_config.py  simulation.py  smoke_report.py  storage_runtime.py  store.py  strategy.py
services/core/tests/: test_api.py
(+31 files in other folders)
